@@ -1,6 +1,7 @@
 --------------------------
 Changes in 1.9 (not yet released)
 
+- Collada loader now instantiates camera nodes which had been ignore so far (thx @NemoStein for the test .dae)
 - line2d::intersectWith has a new parameter to allow ignoring intersections with coincident lines
 - vector2d::equals now has an tolerance parameter for passing the epsilon (like vector3d had). Note that this changes the default 
   behavior of vector2d::equals as well as functions using it like the operators for ==, !=, <, >, <=, >= when using vector2d with f64
